--- a/index.html
+++ b/index.html
@@ -174,16 +174,16 @@
       </div>
     </section><!-- End Contact Section -->
 
- <section>
+
 <script
   src="https://utteranc.es/client.js"
-  repo="baroubard/baroubard.github.io/"
+  repo="https://github.com/baroubard/baroubard.github.io"
   issue-term="pathname"
   theme="github-light"
   crossorigin="anonymous"
   async>
 </script>
- </section>
+
 
 
   </main><!-- End #main -->
