--- a/index.html
+++ b/index.html
@@ -175,14 +175,17 @@
     </section><!-- End Contact Section -->
 
 
-<script
-  src="https://utteranc.es/client.js"
-  repo="https://github.com/baroubard/baroubard.github.io"
-  issue-term="pathname"
-  theme="github-light"
-  crossorigin="anonymous"
-  async>
-</script>
+
+<section class="post-full-comments">
+
+  <script src="https://utteranc.es/client.js"
+          repo="baroubard/baroubard.github.io/"
+          issue-term="pathname"
+          theme="github-light"
+          crossorigin="anonymous"
+          async>
+  </script>
+</section>
 
 
 
