--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <section class="post-full-comments">
 
   <script src="https://utteranc.es/client.js"
-          repo="baroubard/baroubard.github.io/"
+          repo="baroubard/baroubard.github.io"
           issue-term="pathname"
           theme="github-light"
           crossorigin="anonymous"
