--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <a href="https://github.com/baroubard" class="github"><i class="bx bxl-github"></i></a>
       </div>
     </div>
-  </section><!-- End Hero -->
+  </section><!-- End 
 
   <main id="main">
 
