--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -45,7 +45,7 @@
               <!-- <div class="swiper-wrapper align-items-center"> -->
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-11.png" alt="">
+                  <img src="assets/img/portfolio/portfolio-22.png" alt="">
                 </div>
 
           <!--       <div class="swiper-slide">
@@ -59,16 +59,28 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Dolomites</h3>
+              <h3>Aosta & Chamonix</h3>
               <ul>
-                <li><strong>Country</strong>: Italy</li>
-                <li><strong>Category</strong>: Trek</li>
-                <li><strong>Project date</strong>: 5 September 2022 | 12 September 2022 </li>
-                <li><strong>Maps & Codes</strong>: <a href="http://github.com/baroubard/Dolomites/" target="_blank" >Dolomites Github </a>  </li>
+                <li><strong>Country</strong>: France & Italy</li>
+                <li><strong>Category</strong>: Hike</li>
+                <li><strong>Project date</strong>: 26 September 2021 | 1 October 2021 </li>
+                <li><strong>Maps & Codes</strong>: <a href="#" target="_blank" >None </a>  </li>
               </ul>
             </div>
-            <div class="portfolio-description">
+          </div>
+
+
+         <div class="portfolio-description">
               <h2>INCOMING</h2>
+
+            
+              <img src="assets/img/portfolio/IMG_3667.JPG" class="left" style="width: 100%; height: 80%">
+
+
+            </div>
+
+
+
               <p>
                 You will get information once the trek will be done !
               </p>
@@ -76,12 +88,9 @@
               <p>
                 Thanks for your enthusiasm ! 
               </p>
-
-            </div>
-          </div>
+ 
 
         </div>
-
       </div>
 
 
