--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>baroubard.</h1>
-      <p>We are <span class="typed" data-typed-items="Trekkers, Hikers, ... and marmot lovers"></span></p>
+      <p>We are <span class="typed" data-typed-items="Trekkers, Hikers, ... marmot lovers"></span></p>
       <div class="social-links">
         <a href="https://www.instagram.com/baroubard/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://github.com/baroubard" class="github"><i class="bx bxl-github"></i></a>
