--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -74,7 +74,7 @@
               Small disclaimer: This subject consists of several days of walking, a real Trek. For the sake of narration and to make it easier for you to organise, each day will be described one after the other.
               <br>
               <br>
-              <img src="assets/img/portfolio/IMG_5030.JPG" class="left" style="width: 100%; height: 80%">
+              <img src="assets/img/portfolio/IMG_5030.jpg" class="left" style="width: 100%; height: 80%">
         </div>
 
 
@@ -101,7 +101,7 @@ I'd like to take this opportunity to warn you that you absolutely must be well e
 <br>
 <br>
 
-<p><img src="assets/img/portfolio/IMG_5068.JPG" style="float:left;padding-right:20px" width="250" />
+<p><img src="assets/img/portfolio/IMG_5068.jpg" style="float:left;padding-right:20px" width="250" />
 <br>
 <br>
 
@@ -130,7 +130,7 @@ You are finally at the Rifugio Bergamo, you finally see the two-coloured Tyrolea
 <br>
 <strong>Gross: +XX' -XX'</strong>
 
-<p><img src="assets/img/portfolio/IMG_5076.JPG" style="float:right;padding-left:20px" width="255" /> 
+<p><img src="assets/img/portfolio/IMG_5076.jpg" style="float:right;padding-left:20px" width="255" /> 
 <br>
 <br>
 
@@ -145,7 +145,7 @@ Arrived at the Valentini hut, after passing through ski resorts and other infras
 <br>
 <br>
 
-<p><img src="assets/img/portfolio/g91.PNG" style="float:center;display: block; margin-right: auto; margin-left: auto;" width="900" /> 
+<p><img src="assets/img/portfolio/g91.png" style="float:center;display: block; margin-right: auto; margin-left: auto;" width="900" /> 
 <br>
 <br>
 <br>
@@ -170,7 +170,7 @@ Most drivers will not make you pay for the journey even if you give them money, 
 Once in Corvara, two successive cable cars will take you to the foot of the refuge. My injured but courageous fiancée decided to take the first one but refused the second one, despite its steep positive gradient and shy signposting. You will see a magnificent view at the junction of the peripheries and an equally pretty lake a little higher up. On our way a herd of goats followed us well, including a billy goat that was a bit too close to me, he wanted to keep me out of his land at all costs... He won.
 <br>
 Here, a very nice formula made us take a very small hut very isolated from the refuge at 2500m. The experience is unforgettable, don't hesitate for a few euros more ! The fog in the evening near the Piz Boè and its 3152m of altitude, and the dark night to reach the hut after the meal were really funny. We keep the best memory of the meal. The hut is more expensive than average but the place, the raps, the responsible ecofriendly guideline, the hut, the offered aperitif, all that is absolutely worth it !
-<p><img src="assets/img/portfolio/image145.PNG" style="float:center;display: block; margin-right: auto; margin-left: auto;" width="900" class="center" /> 
+<p><img src="assets/img/portfolio/image145.png" style="float:center;display: block; margin-right: auto; margin-left: auto;" width="900" class="center" /> 
 
 <br>
 <br>
@@ -188,7 +188,7 @@ Here, a very nice formula made us take a very small hut very isolated from the r
 Do you remember the two preiphericals ? My fiancée wanted to walk down the whole thing feeling a bit better ! So here we are, walking down from Kostner to Corvara in Badia, with heavy rain all along the 2 hour journey, the first of the trek ! After an exceptionally hot summer, we didn't complain. In order not to push too hard we decided to take a short bus ride to Badia (460 to Brunico, stop Abtei Pedratsches).
 <br>
 
-<p><img src="assets/img/portfolio/IMG_5168.JPG" style="float:left;padding-right:20px" width="250" />
+<p><img src="assets/img/portfolio/IMG_5168.jpg" style="float:left;padding-right:20px" width="250" />
 <br>
 <br>
 <br>
@@ -200,7 +200,7 @@ From here (the junction of the two peripheral roads) an initiatory trip presents
 It's a fairly peaceful place, not too crowded due to its size, but also because hikers prefer to head further east to Fanes Hut, a much prettier plain, but very popular and full at our booking. Anyway, it was a really nice place that we did not regret and the next day we found our way back to Fanes Hut, missing almost nothing.
 
 
-<p><img src="assets/img/portfolio/image18.PNG" style="float:center;display: block; margin-right: auto; margin-left: auto;" width="1050" /> 
+<p><img src="assets/img/portfolio/image18.png" style="float:center;display: block; margin-right: auto; margin-left: auto;" width="1050" /> 
 
 <br>
 <br>
@@ -218,7 +218,7 @@ It's a fairly peaceful place, not too crowded due to its size, but also because 
 We know we will be walking (a lot) for at least 3 days in a row, my fiancée's ankle is just starting to recover, so we treat ourselves to one last bus ride, let's be reasonable. To do this we take our bus from Puntac to Zwischenwasser (line 460) and then to Pederù (line 462). Here we are, the beginning of the most isolated part of the route. No more pharmacies in Badia, no more supermarkets, no more buses, cable cars, only your legs !
 <br>
 
-<p><img src="assets/img/portfolio/im44.JPG" style="float:right;padding-left:20px" width="350" />
+<p><img src="assets/img/portfolio/im44.jpg" style="float:right;padding-left:20px" width="350" />
 
 <br>
 
@@ -228,7 +228,7 @@ The climb from the Ra Stua hut to the Biella hut never seems to end, and that's 
 <br>
 The night at the Biella hut was going to be short because of some heavy snorers and about 50 hikers were sleeping there, some of whom were desperate to see the sunrise at 5am. I advise you to wait for the last refuge for that, it will be worth all the sunrises in the world !
 
-<p><img src="assets/img/portfolio/IMG_5257.JPG" style="float:center;display: block; margin-right: auto; margin-left: auto;" width="1050" class="center" /> 
+<p><img src="assets/img/portfolio/IMG_5257.jpg" style="float:center;display: block; margin-right: auto; margin-left: auto;" width="1050" class="center" /> 
 
 
 <br>
@@ -254,7 +254,7 @@ If you have the opportunity, allow an extra 1-2 hours to make a diversion to the
 <br>
 Once we arrived at the Vallandro hut, I must say that it is probably one of the huts where we had the best night, warm place (except the man at the counter), quiet dormitory where we were only 3 (after Biella everything seemed quiet), free shower, copious meal, real pastries for dessert!
 
-<p><img src="assets/img/portfolio/image67.PNG" style="float:center;display: block; margin-right: auto; margin-left: auto;" width="1050" class="center" /> 
+<p><img src="assets/img/portfolio/image67.png" style="float:center;display: block; margin-right: auto; margin-left: auto;" width="1050" class="center" /> 
 
 <br>
 <br>
@@ -279,11 +279,11 @@ The price of the ticket aside, and my red ass, it remains without doubt one of t
 <br>
 The meal was very pleasant by the way, the first real refuge meal according to us, the rest we had had little chance with people not very talkative/interested/bilingual.
 
-<p><img src="assets/img/portfolio/g138.PNG" style="float:center;display: block; margin-right: auto; margin-left: auto;" width="1050" class="center" /> 
+<p><img src="assets/img/portfolio/g138.png" style="float:center;display: block; margin-right: auto; margin-left: auto;" width="1050" class="center" /> 
 
 <br>
 
-<p><img src="assets/img/portfolio/g143.PNG" style="float:center;display: block; margin-right: auto; margin-left: auto;" width="1050" class="center" /> 
+<p><img src="assets/img/portfolio/g143.png" style="float:center;display: block; margin-right: auto; margin-left: auto;" width="1050" class="center" /> 
 
 
 <br>
